# c00clupea

./: #*shell*#  *shell*  *shell*~  .#branch.version  .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.am~  Makefile.in  README  README.md  TAGS  TASKS.txt  Todo.org  branch.version  c00_hashmap_test  c00clupea  config.status  configure  configure.ac  configure.ac~  configure.scan~  connectors  cooclupea  deploy_both.sh  deploy_build_server.sh  deploy_c00clupea_cloud.sh  deploy_coo.sh  deploy_coo_bsd.sh  deploy_gentoo_local.sh  deploy_local.sh  linux_analyse.sh  make_tags.sh  make_tags.sh~  scan_files.sh  scan_files_measurement.sh  scan_files_noproxy.sh  (+1 more)
autom4te.cache/: output.0  output.3  output.4  output.5  output.6  requests  traces.0  traces.1  traces.2  traces.4  traces.5  traces.6
c00clupea-01/: INSTALL  README  configure.ac
c00clupea-01/conf/: c00clupea.config  c00s_uname  http_path_master.config  http_path_whitelist.config
conf/: Makefile.am  c00clupea_hm.config  c00s_uname  http_path_whitelist.config
htdocs/: index.html
kernel/: Makefile.am  Makefile.common  Makefile.kernel  README  buildonly.sh  configure  configure.ac  configure.scan  deploy_gentoo.sh
kernel/m4/: acinclude.m4
kernel/src/: conf.h  conf.h.in  deploy_local.sh
kernel/src/guardian/: .c00clupeaguard.ko.cmd  .c00clupeaguard.mod.o.cmd  .c00clupeaguard.o.cmd  .concrete_hooks.o.cmd  .guardian_mod.o.cmd  Makefile.am  a.id0  a.id1  a.id2  a.nam  a.out  actions.c  apaterules.c  c00clupeaguard.ko  c00clupeaguard.mod.c  calchex.sh  cases.h  concrete_hooks.c  datatypes_def.h  gen_methods.h  guardian.c  guardian.h  guardian.idb  guardian_bison.c  guardian_bison.h  guardian_bison.id0  guardian_bison.id1  guardian_bison.y  guardian_flex.c  guardian_flex.l  guardian_mod.c  guardian_mod.mod.c  guardian_module.h  guardianl  guardinterpreter  guardinterpreter.i64  interpreter.bak.c  interpreter.c  interpreter.h  languagesample.sample  (+6 more)
kernel/src/guardian/.tmp_versions/: c00clupeaguard.mod
kernel/src/guardian/testbytecode/: simpletest.ba
man/: Makefile  Makefile.am  Makefile.am~  Makefile.in  c00clupea.man
src/: #util.c#  #util.h#  .#conf.h  .#util.c  Makefile  Makefile.am  Makefile.am~  Makefile.bak  Makefile.in  Makefile~  c00_convenience.h  c00_convenience.h.orig  c00clupea  c00clupea_honeymaster.c  c00clupea_honeymaster.c.orig  c00clupea_honeymaster.h  c00clupea_sim  c00clupea_sim.c  c00clupea_sim.c.orig  c00clupea_sim.h  c00clupea_sim.h.orig  c00clupeaperf.c  c00clupeaperf.h  conf.h  conf.h.in  conf.h.in~  config.c  config.h  cooclupea  cooclupea.c  cooclupea.c~  cooclupea.h  cooclupea.h.orig  cooclupea.plist  cooclupea_control.py  cooclupea_control.py~  global.h  global.h.gch  index.html  pandora.config  (+17 more)
src/.deps/: config.Po  cooclupea.Po  ringbuffer.Po  strategy.Po  strategy_dev_null.Po  strategy_http_path.Po  strategy_http_simple.Po  util.Po
src/coreutils/: c00s_NUM_APPLETS.h  c00s_NUM_APPLETS.h.orig  c00s_ash.c  c00s_ash.c.orig  c00s_cat.c  c00s_cat.h  c00s_cat.h.orig  c00s_echo.c  c00s_echo.h  c00s_echo.h.orig  c00s_false.c  c00s_false.c.orig  c00s_false.h  c00s_nice.c  c00s_nice.h  c00s_passwd.c  c00s_passwd.h  c00s_pwd.c  c00s_pwd.h  c00s_pwd_.c  c00s_pwd_.h  c00s_shell_common.c  c00s_shell_common.h  c00s_strings.c  c00s_strings.c.orig  c00s_strings.h  c00s_touch.c  c00s_touch.h  c00s_true.c  c00s_true.c.orig  c00s_true.h  c00s_true.h.orig  c00s_uname.c  c00s_uname.h  c00s_unicode.h  c00s_uptime.c  c00s_uptime.c.orig  c00s_uptime.h  c00s_usleep.c  c00s_usleep.c.orig  (+8 more)
src/filesystem/: c00_fs_basic.h
src/honeymasterclient/: c00s_hm_api.c
src/include/: c00s_hm_api.h  c00s_libcu.h  c00s_unicode.h  c00s_util.h  c00s_xatonum.h
src/strategies/: .#strategy_http_path.c  http_codes.h  http_codes.h.orig  http_codes.h~  strategy_dev_null.c  strategy_dev_null.h  strategy_http_path.c  strategy_http_path.c.orig  strategy_http_path.h  strategy_http_simple.c  strategy_http_simple.c.orig  strategy_http_simple.h
src/strategies/.deps/: strategy_dev_null.Po  strategy_http_path.Po  strategy_http_simple.Po
src/util/: #c00s_lineedit.c#  .#c00_hashmap.c  bb_iobridge.c  bb_iobridge.c.orig  bb_signals.c  bb_util.c  bb_util.c.orig  busybox_cccc.h  busybox_cccc.h.orig  c00_array_list.c  c00_array_list.c.orig  c00_array_list.h  c00_array_list.h.orig  c00_dictionary.c  c00_dictionary.c.orig  c00_dictionary.h  c00_dictionary.h.orig  c00_hashmap.c  c00_hashmap.c.orig  c00_hashmap.h  c00_hashmap.h.orig  c00_iniparser.c  c00_iniparser.h  c00_linked_list.c  c00_linked_list.h  c00_message.c  c00_message.h  c00_message.h.orig  c00b_sysinfo.c  c00b_sysinfo.c.orig  c00b_sysinfo.h  c00s_ash_ptr_hack.c  c00s_askpass.c  c00s_find_pid_by_name.c  c00s_find_pid_by_name.c.orig  c00s_kill.c  c00s_kill.c.orig  c00s_lineedit.c  c00s_lineedit.c.orig  c00s_parse_mode.c  (+19 more)
src/util/.deps/: c00_hashmap.Po
test/: Makefile  c00_array_list_test  c00_hashmap_test  run_test.sh  test_valgrind
