AUTOMAKE_OPTIONS = foreign

CC = clang


#CC = @CC@ 

SUBDIRS = src man

EXTRA_DIST = autogen.sh conf/c00clupea.config conf/http_path_whitelist.config man/c00clupea.man scan_files.sh conf/http_path_master.config

confdir = /etc/c00clupea

conf_DATA = conf/c00clupea.config conf/http_path_whitelist.config conf/http_path_master.config
